# cadex_test

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakelists.txt  main.cpp
src/Headers/: Circle.h  Constants.h  Curve.h  Ellipse.h  Helix.h  Vec3d.h
src/Sources/: Circle.cpp  Curve.cpp  Ellipse.cpp  Helix.cpp
